--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10904,3 +10904,40 @@ a.text-dark:focus {
   }
 }
 
+/* Sticky footer styles
+-------------------------------------------------- */
+
+html {
+  position: relative;
+  min-height: 100vh;
+}
+
+body {
+  margin-bottom: 210px;
+  /* Margin bottom by footer height */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 -2px 5px;
+}
+
+.nav-tabs .nav-link {
+  border: 0;
+}
+
+.nav-tabs .nav-link:hover {
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-link.active:hover {
+  background-color: #fff;
+  border: 0;
+  position: relative;
+  bottom: -2px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0 -2px 5px;
+}
+
